炫彩编程助手/Data/DemoMgr/VS/Lib/xcgui.h


///@}

///@}

/// @defgroup groupImageDrawType 图片绘制类型
/// @ingroup macroDefine
/// @{
enum  image_draw_type_
{
	image_draw_type_default = 0,  ///<默认
	image_draw_type_stretch,    ///<拉伸
	image_draw_type_adaptive,   ///<自适应,九宫格
	image_draw_type_tile,       ///<平铺
	image_draw_type_fixed_ratio,  ///<固定比例,当图片超出显示范围时,按照原始比例压缩显示图片
	image_draw_type_adaptive_border,  ///<九宫格不绘制中间区域
};
XC_API float WINAPI XImage_SetRotateAngle(HIMAGE hImage, float  fAngle);

XC_API void WINAPI XImage_EnableTranColor(HIMAGE hImage, BOOL bEnable); //启用透明色
XC_API void WINAPI XImage_EnableAutoDestroy(HIMAGE hImage, BOOL bEnable); //启用或关闭自动销毁,当与UI元素关联时有效
XC_API void WINAPI XImage_EnableCenter(HIMAGE hImage, BOOL bCenter); //bCenter
XC_API BOOL WINAPI XImage_IsCenter(HIMAGE hImage);

XC_API image_draw_type_ WINAPI XImage_GetDrawType(HIMAGE hImage); //获取图片绘制类型
XC_API int WINAPI XImage_GetWidth(HIMAGE hImage);

XC_API int WINAPI XImage_GetHeight(HIMAGE hImage);

XC_API void WINAPI XImage_AddRef(HIMAGE hImage);

XC_API void WINAPI XImage_Release(HIMAGE hImage);

XC_API int  WINAPI XImage_GetRefCount(HIMAGE hImage);

XC_API void WINAPI XImage_Destroy(HIMAGE hImage);