炫彩编程助手/Data/DemoMgr/VB/Lib/xcgui.bas

Declare Function XImage_SetRotateAngle Lib "xcgui.dll" (ByVal hImage As Long, ByVal fAngle As Single) As Single
Declare Sub XImage_EnableTranColor Lib "xcgui.dll" (ByVal hImage As Long, ByVal bEnable As Boolean)
Declare Sub XImage_EnableAutoDestroy Lib "xcgui.dll" (ByVal hImage As Long, ByVal bEnable As Boolean)
Declare Sub XImage_EnableCenter Lib "xcgui.dll" (ByVal hImage As Long, ByVal bCenter As Boolean)
Declare Function XImage_IsCenter Lib "xcgui.dll" (ByVal hImage As Long) As Boolean
Declare Function XImage_GetDrawType Lib "xcgui.dll" (ByVal hImage As Long) As Long
Declare Function XImage_GetWidth Lib "xcgui.dll" (ByVal hImage As Long) As Long
Declare Function XImage_GetHeight Lib "xcgui.dll" (ByVal hImage As Long) As Long
Declare Sub XImage_AddRef Lib "xcgui.dll" (ByVal hImage As Long)
Declare Sub XImage_Release Lib "xcgui.dll" (ByVal hImage As Long)
Declare Function XImage_GetRefCount Lib "xcgui.dll" (ByVal hImage As Long) As Long
Declare Sub XImage_Destroy Lib "xcgui.dll" (ByVal hImage As Long)



'
'
'vb6的数据类型有以下几种:
'Boolean数据类型 　　 变量存储为 16 位       只能是 True 或是 False
'Byte数据类型 　　　　变量存储为 8 位         范围在 0 至 255 之间
'Currency数据类型 　　变量存储为 64 位      范围可以从 -922,337,203,685,477.5808 到 922,337,203,685,477.5807
'Date数据类型 　　　　变量存储为  64 位
'                              日期范围从 100 年 1 月 1 日到 9999 年 12 月 31 日，
'                              时间可以从 0:00:00 到 23:59:59。
'
'Decimal数据类型　　  变量存储为 96 位
'
'Double数据类型 　　  变量存储为 64 位
'Integer数据类型 　　  变量存储为 16 位　　范围为 -32,768 到 32,767 之间
'Long数据类型 　　　　变量存储为 32 位　　范围从 -2,147,483,648 到 2,147,483,647
'Object数据类型 　　　存储为 32 位（4 个字节）的地址形式
'Single数据类型          变量存储为 IEEE 32 位
'
'String数据类型 字符串有两种: 变长与定长的字符串?
'                              变长字符串最多可包含大约 20 亿 ( 2^31)个字符。
'                              定长字符串可包含 1 到大约 64K ( 2^16 ) 个字符。
'用户定义数据类型
'Variant数据类型
'----------------------------------
'Boolean数据类型 Boolean 变量存储为 16 位（2 个字节）的数值形式，但只能是 True 或是 False。Boolean 变量的值显示为 True 或 False（在使用 Print 的时候），或者 #TRUE# 或 #FALSE#（在使用 Write # 的时候）。使用关键字 True 与 False 可将 Boolean 变量赋值为这两个状态中的一个。
'当转换其他的数值类型为 Boolean 值时，0 会转成 False，而其他的值则变成 True。当转换 Boolean 值为其他的数据类型时，False 成为 0，而 True 成为 -1。
'------------------------------------
'Byte数据类型
'Byte 变量存储为单精度型、无符号整型、8 位（1个字节）的数值形式，范围在 0 至 255 之间。
'Byte 数据类型在存储二进制数据时很有用。
'------------------------------------
'Currency数据类型
'Currency 变量存储为 64 位（8 个字节）整型的数值形式，然后除以 10,000 给出一个定点数，其小数点左边有 15 位数字，右边有 4 位数字。这种表示法的范围可以从 -922,337,203,685,477.5808 到 922,337,203,685,477.5807。Currency 的类型声明字符为at号 (@)。
'Currency 数据类型在货币计算与定点计算中很有用，在这种场合精度特别重要。
'------------------------------------
'Date数据类型
'Date 变量存储为 IEEE 64 位（8 个字节）浮点数值形式，其可以表示的日期范围从 100 年 1 月 1 日到 9999 年 12 月 31 日，而时间可以从 0:00:00 到 23:59:59。任何可辨认的文本日期都可以赋值给 Date 变量。日期文字须以数字符号 (#) 扩起来，例如，#January 1, 1993# 或 #1 Jan 93#。
'Date 变量会根据计算机中的短日期格式来显示。时间则根据计算机的时间格式（12 或 24 小时制）来显示。
'当其他的数值类型要转换为 Date 型时，小数点左边的值表示日期信息，而小数点右边的值则表示时间。午夜为 0 而中午为 0.5。负整数表示 1899 年 12 月 30 日之前的日期。
'------------------------------------------
'Decimal数据类型
'Decimal 变量存储为 96 位（12 个字节）无符号的整型形式，并除以一个 10 的幂数。这个变比因子决定了小数点右面的数字位数，其范围从 0 到 28。变比因子为 0（没有小数位）的情形下，最大的可能值为 +/-79,228,162,514,264,337,593,543,950,335。而在有 28 个小数位的情况下，最大值为 +/-7.9228162514264337593543950335，而最小的非零值为 +/-0.0000000000000000000000000001。
'注意 此时，Decimal 数据类型只能在 Variant中使用，也就是说，不能声明一变量为 Decimal 的类型。不过可用 Cdec 函数，创建一个子类型为 Decimal 的 Variant。
'-------------------------------------------
'Double数据类型
'Double（双精度浮点型）变量存储为 IEEE 64 位（8 个字节）浮点数值的形式，它的范围在负数的时候是从 -1.79769313486232E308 到 -4.94065645841247E-324，而正数的时候是从 4.94065645841247E-324 到 1.79769313486232E308。Double 的类型声明字符是数字符号 (#)。
'-------------------------------------------
'Integer数据类型
'Integer 变量存储为 16位（2 个字节）的数值形式，其范围为 -32,768 到 32,767 之间。Integer 的类型声明字符是百分比符号 (%)。
'也可以用 Integer 变量来表示枚举值。枚举值可包含一个有限集合，该集合包含的元素都是唯一的整数，每一个整数都在它使用时的上下文当中有其特殊意义。枚举值为在已知数量的选项中做出选择提供了一种方便的方法，例如，black = 0，white = 1 等等。较好的编程作法是使用 Const 语句将每个枚举值定义成常数。
'---------------------------------------------
'Long数据类型
'Long（长整型）变量存储为 32 位（4 个字节）有符号的数值形式，其范围从 -2,147,483,648 到 2,147,483,647。Long 的类型声明字符为和号 (&)。
'---------------------------------------------
'Object数据类型
'Object 变量存储为 32 位（4 个字节）的地址形式，其为对象的引用。利用 Set 语句，声明为 Object 的变量可以赋值为任何对象的引用。
'注意 虽然以 Object 类型声明的变量足以适应包含对各种对象的引用，但是绑定到变量引用的对象总是在晚期（运行时）绑定。要强迫在早期（编译时间）绑定的话，须将对象的引用赋值给用特定类名称声明的变量。
'-----------------------------------------------
'Single数据类型
'Single（单精度浮点型）变量存储为 IEEE 32 位（4 个字节）浮点数值的形式，它的范围在负数的时候是从 -3.402823E38 到 -1.401298E-45，而在正数的时候是从 1.401298E-45 到 3.402823E38。Single 的类型声明字符为感叹号 (!)。
'------------------------------------------------
'String数据类型
'字符串有两种: 变长与定长的字符串?
'变长字符串最多可包含大约 20 亿 ( 2^31)个字符。
'定长字符串可包含 1 到大约 64K ( 2^16 ) 个字符。
'注意 Public 定长字符串不能在类模块中使用。
'String 之字符码的范围是 0 到 255。字符集的前 128 个字符（0 到 127）对应于标准的 U.S. 键盘上的字符与符号。这前 128 个字符与 ASCII 字符集中所定义的相同。后 128 个字符（128 到 255）则代表特殊字符，例如国际字符，重音符号，货币符号及分数。String 的类型声明字符为美元号 ($)。
'---------------------------------------------------
'Variant数据类型
'
'Variant 数据类型是所有没被显式声明（用如 Dim、Private、Public 或 Static等语句）为其他类型变量的数据类型。Variant 数据类型并没有类型声明字符。
'
'Variant 是一种特殊的数据类型，除了定长 String 数据及用户定义类型外，可以包含任何种类的数据。Variant 也可以包含 Empty、Error、Nothing 及 Null等特殊值。可以用 VarType 函数或 TypeName 函数来决定如何处理 Variant 中的数据。
'
'数值数据可以是任何整型或实型数，负数时范围从 -1.797693134862315E308 到 -4.94066E-324，正数时则从 4.94066E-324 到 1.797693134862315E308。通常，数值Variant 数据保持为其 Variant 中原来的数据类型。例如，如果把一个 Integer赋值给 Variant，则接下来的运算会把此 Variant 当成 Integer 来处理。然而，如果算术运算针对含 Byte、Integer、Long 或 Single 之一的Variant 执行，并当结果超过原来数据类型的正常范围时，则在 Variant 中的结果会提升到较大的数据类型。如 Byte 则提升到 Integer，Integer 则提升到 Long，而 Long和Single 则提升为 Double。当 Variant 变量中有 Currency、Decimal 及 Double 值超过它们各自的范围时，会发生错误。
'
'可以用 Variant 数据类型来替换任何数据类型，这样会更有适应性。如果 Variant 变量的内容是数字，它可以用字符串来表示数字或是用它实际的值来表示，这将由上下文来决定，例如：
'
'Dim MyVar As Variant
'MyVar = 98052
'
'在前面的例子中，MyVar 内有一实际值为 98052 的数值。像期望的那样，算术运算子可以对 Variant 变量运算，其中包含数值或能被解释为数值的字符串数据。如果用 + 运算子来将 MyVar 与其他含有数字的 Variant 或数值类型的变量相加，结果便是一算术和。
'
'Empty 值用来标记尚未初始化（给定初始值）的Variant 变量。内含 Empty 的 Variant 在数值的上下文中表示 0，如果是用在字符串的上下文中则表示零长度的字符串 ("")。
'
'不应将 Empty 与 Null 弄混。Null 是表示 Variant 变量确实含有一个无效数据。
'
'在 Variant 中，Error 是用来指示在过程中出现错误时的特殊值。然而，不像对其他种类的错误那样，程序并不产生普通的应用程序级的错误处理。这可以让程序员，或应用程序本身，根据此错误值采取另外的行动。可以用 CVErr 函数将实数转换为错误值来产生 Error 值。
'--------------------------------------------------
'用户定义数据类型
'
'可以是任何用 Type 语句定义的数据类型。用户自定义类型可包含一个或多个某种数据类型的数据元素、数组或一个先前定义的用户自定义类型。例如：
'
'Type MyType
'  MyName As String  '定义字符串变量存储一个名字。
'  MyBirthDate As Date  '定义日期变量存储一个生日。
'  MySex As Integer  '定义整型变量存储性别
'End Type            '（0 为女，1 为男）
'
'
